Fixed underlining bottom cards on iOS devices

--- a/src/assets/scss/components/RecentPastes.scss
+++ b/src/assets/scss/components/RecentPastes.scss
@@ -6,6 +6,9 @@
       margin-right: 5px;
     }
   }
+  a {
+    text-decoration: none;
+  }
   .card {
     padding: 10px;
     .card-title {
